<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/to_log_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Log New Exercise"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/to_previous_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="View Exercise Log"
        android:textColor="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_log_exercise_button"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/to_inbox_from_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Inbox"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_previous_activity_button"
        app:layout_constraintVertical_bias="0.914" />

    <Button
        android:id="@+id/to_friends_from_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Friends"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/to_inbox_from_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_previous_activity_button"
        app:layout_constraintVertical_bias="0.914" />

    <Button
        android:id="@+id/to_profile_from_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Profile"
        android:textColor="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to_inbox_from_home"
        app:layout_constraintTop_toBottomOf="@+id/to_previous_activity_button"
        app:layout_constraintVertical_bias="0.914" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D8E647"
        android:text="DEFAULT WELCOME MESSAGE"
        android:textAlignment="center"
        android:textColor="#040303"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="238dp"
        android:layout_height="251dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="57dp"
        android:src="@drawable/building_sports_gym__1_"
        app:layout_constraintBottom_toTopOf="@+id/to_log_exercise_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

</androidx.constraintlayout.widget.ConstraintLayout>