...
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Logout"
        android:textColor="#020000"
        app:layout_constraintBottom_toTopOf="@+id/to_home_from_profile"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <Button
        android:id="@+id/to_change_password_from_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Change Password"
        android:textColor="#020000"
        app:layout_constraintBottom_toBottomOf="parent"
...
