<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsFragment" >

    <TextView
        android:id="@+id/new_friends"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#D8E647"
        android:paddingLeft="8dp"
        android:text="Looking for new friends?"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/send_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-20dp"
        android:backgroundTint="#56ADFA"
        android:text="Send Request"
        android:textColor="#050000"
        app:layout_constraintBottom_toTopOf="@+id/to_request_from_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/enter_username" />

    <Button
        android:id="@+id/to_request_from_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#56ADFA"
        android:text="Pending Friend Requests"
        android:textColor="#040000"
        app:layout_constraintBottom_toTopOf="@+id/send_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView3" />

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Enter a username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/send_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_friends"
        tools:ignore="Autofill, LabelFor" />

    <TextView
        android:id="@+id/inbox_identifier"
        android:layout_width="219dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="15dp"
        android:background="#D8E647"
        android:paddingLeft="8dp"
        android:text="Friends Page"
        android:textColor="#020202"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="307dp"
        android:layout_height="189dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="@id/to_inbox_from_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_request_from_friends">

        <TableLayout
            android:id="@+id/friends_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="21dp"
            android:background="#ABD5FA"
            android:stretchColumns="0"
            app:layout_constraintBottom_toTopOf="@+id/to_home_from_previous_activity"
            app:layout_constraintTop_toBottomOf="@+id/previous_activity_identifier">


            <TableRow
                android:id="@+id/header_row"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="#56ADFA">

                <TextView
                    android:id="@+id/my_friends_row"
                    android:layout_column="0"
                    android:padding="0.03in"
                    android:text="My Friends"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/to_home_from_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Home"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/to_inbox_from_friends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/to_inbox_from_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Inbox"
        android:textColor="#070000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/to_profile_from_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="Profile"
        android:textColor="#090000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to_inbox_from_friends"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="188dp"
        android:layout_height="95dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/friends_world"
        app:layout_constraintBottom_toTopOf="@+id/new_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inbox_identifier" />
</androidx.constraintlayout.widget.ConstraintLayout>